fixes text overflow issue throughout app

--- a/app-frontend/src/assets/styles/sass/_shame.scss
+++ b/app-frontend/src/assets/styles/sass/_shame.scss
@@ -1416,7 +1416,7 @@ table.upload-info {
   border-bottom: 1px solid $gray-lightest;
 }
 .list-group-overflow {
-  overflow: visible;
+  //overflow: visible;
 }
 
 rf-export-item {
